fix: fixed spacing and links

--- a/src/scss/sipstack/00.general.css
+++ b/src/scss/sipstack/00.general.css
@@ -119,7 +119,6 @@ figure img {
 }
 
 .custom-card {
-  padding: 3%;
   margin-top: 5%;
   border-radius: 20px;
   max-width: 80%;
